Bash Argument Fixes

--- a/package.json
+++ b/package.json
@@ -35,4 +35,11 @@
       ]
     }
   ]
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "arrowParens": "avoid",
+    "singleQuote": true
+  }
 }
